--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,7 @@
 platform = atmelsam
 board = mkrwifi1010
 framework = arduino
-lib_deps = adafruit/Adafruit ADT7410 Library@^1.3.1
+lib_deps = 
+	adafruit/Adafruit ADT7410 Library@^1.3.1
+	arduino-libraries/WiFiNINA@^1.9.1
+	arduino-libraries/ArduinoMqttClient@^0.1.8
